Redesign RPC interface
